--- a/src/EVEMon.AuthBoostrap/package.json
+++ b/src/EVEMon.AuthBoostrap/package.json
@@ -14,31 +14,49 @@
     "@types/bootstrap": "^4.0.1",
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jquery": "^3.3.0",
+    "@types/uuid": "^3.4.3",
     "@types/webpack": "^3.8.3",
     "@types/webpack-chunk-hash": "^0.4.0",
     "aurelia-webpack-plugin": "^2.0.0-rc.5",
+    "autoprefixer": "^8.2.0",
     "babel-loader": "8.0.0-beta.0",
     "core-js": "^2.5.3",
     "cross-env": "^5.1.3",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "fs": "^0.0.1-security",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.11.1",
+    "node-sass": "^4.8.3",
     "nodemon": "^1.14.11",
     "path": "^0.12.7",
+    "postcss-loader": "^2.1.3",
+    "precss": "^3.1.2",
     "regenerator-runtime": "^0.11.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.1.0",
     "tsconfig-paths": "^3.1.1",
     "typescript": "^2.6.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-chunk-hash": "^0.5.0",
     "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-regular": "^5.0.9",
+    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "across-tabs": "^1.2.0",
     "aurelia-bootstrapper": "^2.1.1",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.9"
+    "moment": "^2.22.0",
+    "oidc-client": "^1.4.1",
+    "popper.js": "^1.12.9",
+    "uuid": "^3.2.1"
   }
 }
