--- a/src/EVEMon.Common/packages.config
+++ b/src/EVEMon.Common/packages.config
@@ -6,6 +6,7 @@
   <package id="Google.Apis.Calendar.v3" version="1.10.0.1580" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.10.0" targetFramework="net461" />
   <package id="Google.Apis.Drive.v3" version="1.10.0.40" targetFramework="net461" />
+  <package id="IdentityModel" version="3.4.0" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
@@ -14,9 +15,14 @@
   <package id="Microsoft.OneDriveSDK" version="1.1.29" targetFramework="net461" />
   <package id="NetOffice.Core.Net40" version="1.7.3.0" targetFramework="net461" />
   <package id="NetOffice.Outlook.Net40" version="1.7.3.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Scientist" version="1.0.1" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="YamlDotNet" version="3.8.0" targetFramework="net461" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net461" />
 </packages>
